[package]
name = "figma-api"
version = "0.1.0"
authors = ["Andrew Vy <andrew@andrewvy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"