[package]
name = "figma-to-react"
version = "0.1.0"
authors = ["Andrew Vy <andrew@andrewvy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0.40"
serde_json = "1.0"
figma-api = { path = "../figma-api" }